Updated Agent registation API
